fix tabs align

--- a/view/css/style.css
+++ b/view/css/style.css
@@ -84,13 +84,13 @@ padding:0
 cursor:pointer;
 color: #FFFFFF;
 font-size: 24px;
-vertical-align: text-top
+vertical-align: middle
 }
 
 .active-page {
 border-bottom:3px solid #009688;
 border-top:3px solid #181818;
-padding-bottom: 11px
+padding-bottom: 12px
 }
 
 .active-page a{
@@ -119,7 +119,7 @@ color:#FFFFFF
 }
 
 .tab {
-vertical-align:bottom;
+vertical-align:middle;
 padding-left:15px;
 padding-right:15px;
 font-weight: 400;
